# temporal_demo

./: .gitignore  AGENTS.md  README.md  TODO.md  docker-compose.yml  main.py  pyproject.toml
apps/byoc/: __init__.py  __main__.py
apps/client/: __main__.py
apps/worker/: __main__.py
docs/: AGENT_LOOP_WALKTHROUGH.md  BYOC_WORKSHEET.md  DEMO_SCRIPT.md  KNOWLEDGE_SHARE_PLAN.md  LOCAL_DEV.md  MENU_ROLLOUT_WALKTHROUGH.md  ORDER_FULFILLMENT_WALKTHROUGH.md
slides/: package-lock.json  pnpm-lock.yaml  slides.md
src/temporal_demo/: byoc_assistant.py  config.py
src/temporal_demo/activities/: agent_activities.py  menu_activities.py  order_activities.py
src/temporal_demo/workflows/: agent_loop.py  menu_rollout.py  order_fulfillment.py
tests/: test_byoc_assistant.py  test_order_fulfillment_workflow.py  test_order_fulfillment_workflow_unittest.py  test_path2_examples.py
